# ai_conversation

./: CMakeLists.txt  README.md  clean.pcm  config.ini  config.ini.bak2  crash_context_v1  mic.pcm  sample_send_h264_pcm.bak  sample_send_h264_pcm.cpp  sample_send_h264_pcm.h  speak.pcm  video_encode_camera2h264.cpp  video_encode_camera2h264.hpp
agora_sdk/include/: AgoraBase.h  IAgoraRtmClient.h  NGIAgoraCameraCapturer.h  NGIAgoraExtensionAINoiseSuppressor.h  NGIAgoraExtensionScreenSource.h
common/: sample_common.cpp  sample_common.h  sample_connection_observer.cpp  sample_connection_observer.h  sample_local_user_observer.cpp  sample_local_user_observer.h  yuv_capture.cpp  yuv_capture.h
ffmpeg/include/libavutil/: ffversion.h
ffmpeg/lib/: libavdevice.so.60.3.100  libavfilter.so.9.12.100  libavformat.so.60.16.100  libavutil.so.58.29.100  librockchip_mpp.so.0  librockchip_vpu.so.0  libswresample.so.4.12.100  libswscale.so.7.5.100
ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
scripts/: check.cmake  env.cmake
